# pyknic

./: .gitignore  MANIFEST.in  mypy.ini  pyknic_loop.sh  setup.cfg
concourse-ci/: README.md  defaults.yml  pyknic-multibranch-test.yml  pyknic-pull-requests.yml  pyknic-test.yml  python-versions.yml
docker/: .gitignore  README.md  build.sh  local-tests-compose.yaml
docker/git-server/: Dockerfile  entrypoint.sh
docker/local-concourse-ci-fly/: Dockerfile  entrypoint.sh
docker/local-concourse-pgsql/: Dockerfile  concourse_ci_init.sql
docker/pyknic/: Dockerfile
docker/pyknic-concourse-base-image/: Dockerfile  test-feedback.sh
pyknic/: base_app.py  bellboy.py  environment.py  path.py  pyknic.py  pyknic_server.py  version.py
pyknic/data/: cities_ru.txt
pyknic/lib/: aio_wrapper.py  aiohttp.py  capability.py  config.py  gettext.py  i12n.py  log.py  path.py  property.py  random.py  registry.py  singleton.py  tar_archiver.py  thread.py  typing.py  uri.py  verify.py  x_mansion.py
pyknic/lib/backup/: __init__.py  archive_v1.py
pyknic/lib/bellboy/: __init__.py  app.py  client.py  config.yaml  console.py  error.py  models.py  secret_backend.py
pyknic/lib/crypto/: __init__.py  cipher.py  hash.py  htpasswd.py  kdf.py  padding.py  proto.py  random.py  rsa.py
pyknic/lib/datalog/: __init__.py  datalog.py  datalog_py.py  proto.py
pyknic/lib/fastapi/: __init__.py  apps_registry.py  base.py  fastapi_aaa.py  headers.py  lobby.py  lobby_fingerprint.py
pyknic/lib/fastapi/lobby_commands/: __init__.py  ping.py  resources.py
pyknic/lib/fastapi/models/: __init__.py  base.py  lobby.py  tg_bot_methods.py  tg_bot_types.py
pyknic/lib/integrated_commands/: __init__.py  backup.py  commands_version.py  copier.py  list_logins.py  login.py  logout.py  logout_all.py  ping.py  resources.py
pyknic/lib/io/: __init__.py  aio_wrapper.py  aligner.py  compression.py  hash.py  read_fo.py  stats.py  tar.py  write_fo.py
pyknic/lib/io/clients/: __init__.py  collection.py  local.py  parts_uploader.py  proto.py  s3.py  sftp.py  virtual_dir.py
pyknic/lib/io/crypto/: __init__.py  padding.py  proto.py
pyknic/lib/io/tar/: __init__.py  readers.py  writers.py
pyknic/lib/io_clients/: __init__.py  collection.py  local.py  proto.py  s3.py  sftp.py  virtual_dir.py
pyknic/lib/signals/: __init__.py  extra.py  proto.py  proxy.py  source.py
pyknic/lib/tasks/: __init__.py  aio_wrapper.py  plain_task.py  proto.py  thread_executor.py  threaded_task.py
pyknic/lib/tasks/scheduler/: __init__.py  chain_source.py  cron_source.py  plain_sources.py  queue.py  record.py  scheduler.py  scheduler_executor.py  tracker_source.py
pyknic/locales/: pyknic.pot
pyknic/locales/en_US/LC_MESSAGES/: messages.mo  messages.po
pyknic/locales/ru/LC_MESSAGES/: messages.mo  messages.po
pyknic/tasks/: __init__.py  config.ini  config.py  config.yaml  gettext.py  log.py  plugins.py
pyknic/tasks/fastapi/: __init__.py  config.ini  config.yaml  lobby.py  server.py  tgbot_word_games.py
pyknic/tasks/fastapi/word_games/: __init__.py  cities.py
tests/pytest/: asyncio_helpers.py  conftest.py  fixture_helpers.py  test.py
tests/pytest/fixtures/: asyncio.py  callbacks_n_signals.py  common.py  config.py  event_loop.py  fastapi.py  gettext.py  lobby.py  sftp_server.py  tasks.py  tgbot.py
tests/pytest/lib/: aio_wrapper_test.py  capability_test.py  config_test.py  gettext_test.py  i12n_test.py  property_test.py  random_test.py  registry_test.py  singleton_test.py  tar_archiver_test.py  thread_test.py  uri_test.py  verify_test.py  x_mansion_test.py
tests/pytest/lib/backup/: archive_v1_test.py
tests/pytest/lib/bellboy/: __init__.py  app_test.py  client_test.py  console_test.py  secret_backend_test.py
tests/pytest/lib/crypto/: cipher_test.py  hash_test.py  htpasswd_test.py  kdf_test.py  padding_test.py  proto_test.py  random_test.py  rsa_test.py
tests/pytest/lib/datalog/: datalog_test.py  proto_test.py
tests/pytest/lib/fastapi/: base_test.py  fastapi_aaa_test.py  lobby_fingerprint_test.py  lobby_test.py
tests/pytest/lib/fastapi/lobby_commands/: resources_test.py
tests/pytest/lib/fastapi/models/: lobby_test.py
tests/pytest/lib/integrated_commands/: __init__.py  list_logins_test.py  login_test.py  logout_all_test.py  logout_test.py  ping_test.py  resources_test.py
tests/pytest/lib/io/: aio_wrapper_test.py  aligner_test.py  compression_test.py  hash_test.py  read_fo_test.py  stats_test.py  tar_test.py  write_fo_test.py
tests/pytest/lib/io/clients/: collection_test.py  local_test.py  parts_uploader_test.py  proto_test.py  s3_test.py  sftp_test.py  virtual_dir_test.py
tests/pytest/lib/io/crypto/: padding_test.py  proto_test.py
tests/pytest/lib/io/tar/: readers_test.py  writers_test.py
tests/pytest/lib/io_clients/: collection_test.py  local_test.py  proto_test.py  s3_test.py  sftp_test.py  virtual_dir_test.py
tests/pytest/lib/signals/: extra_test.py  proto_test.py  proxy_test.py  source_test.py
tests/pytest/lib/tasks/: __init__.py  aio_wrapper_test.py  plain_task_test.py  proto_test.py  thread_executor_test.py  threaded_task_test.py
tests/pytest/lib/tasks/scheduler/: chain_source_test.py  cron_source_test.py  plain_sources_test.py  queue_test.py  record_test.py  scheduler_executor_test.py  scheduler_test.py  tracker_source_test.py
tests/pytest/tasks/: log_test.py
tests/pytest/tasks/fastapi/: lobby_test.py  tgbot_word_games_test.py
