
[metadata]
name = pyknic
url = https://github.com/a1ezzz/pyknic
description = Small library for some cases
author = Ildar Gafurov
author_email = dev@binblob.com
maintainer = Ildar Gafurov
maintainer_email = dev@binblob.com
license = GNU Lesser General Public License v3
long_description = file: README.md, CHANGELOG
long_description_content_type = text/markdown

version = attr:pyknic.version.__version__

keywords = pyknic

classifiers =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires =
install_requires =
    decorator
	fastapi[all]
	uvicorn[standard]

[options.extras_require]
dev =
	twine
	Babel

test =
	aiohttp
    mypy
	pytest
	pytest-cov
	pytest-flake8
	pytest-html

all = pyknic[dev,test]

[tool:pytest]
python_files = tests/pytest/*.py
addopts = -v --html=docs/pytest/index.html --capture=sys --flake8 --cov pyknic --cov-report html:docs/pytest-coverage

[flake8]
extend-ignore = E275
max-line-length = 120

[options.entry_points]
console_scripts =
  pyknic = pyknic.pyknic:App.main
